--- a/urls.json.example
+++ b/urls.json.example
@@ -1,11 +1,13 @@
 {
-  "http://www.site.com.br/js/script.js?v=136" : {
-      "file" : "/home/hernan/teste.js"
+  "http://www.site.com.br/js/script.js" : {
+      "file" : "/path/to/my/local/script.js"
   },
-  "http://www.site.com.br/some/c/coolscript.js?ABC=xyz" : {
-      "url" : "http://www.outra-url.com.br/por-este-arquivo-no-lugar/novo_coolscripts.js?nome=maria"
+
+  "http://www.site.com.br/logo.jpg" : {
+      "url" : "http://www.anothersite.com.br/logo.jpg"
   },
-  "http://publicador.intranet/resources/(?<caminho>.+)" : {
-      "relative_path" : "/home/hernan/publicador/resources/"
+
+  "http://www.site.com.br/resources/(?<caminho>.+)" : {
+      "relative_path" : "/my/local/copy/resources/"
   }
 }
